--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <input type="text" id="user-search" placeholder="Ex. Pretty puppy">
             <br><br>
 
-            <button type="submit" value="search the puppy!" id="submit-button"> Click here to Search</button>
+            <button type="submit" value="search the puppy!" id="submit-button"> Add your search button</button>
             <br><br><br>
         </form>
         <div class="card">
