--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 
-    <title>GIPHY Search</title>
+    <title>GIPHY</title>
 </head>
 
 
@@ -32,8 +32,10 @@
             <button type="submit" value="search the puppy!" id="submit-button"> Add your search button</button>
             <br><br><br>
         </form>
+
         <div class="card">
             <div class="card-body">
+                <h2>Buttons</h2>
                 <hr>
 
               
